Update about me section

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 										<h3>Fitness training program<br />using OpenPose</h3>
 									</header>
 									<a href="https://github.com/micahtyong/Enhance" class="image fit"><img src="images/EnhanceDemo.png" alt="" /></a>
-									<p>The motive behind this product was to create a fitness application designed for people with busy lives, whether it be college students or working professionals. I wanted to create a fitness app entirely different from the ones that already exist on mobile devices.</p>
+									<p>The motive behind this product was to create a fitness application designed for people with busy lives, whether it be college students or working professionals. I wanted to create a fitness app entirely different from the ones that already exist on mobile devices. Available on iOS.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/micahtyong/Enhance" class="button">Full Story</a></li>
 									</ul>
@@ -75,7 +75,7 @@
 										<h3>Gauge student mastery<br />in large classrooms</h3>
 									</header>
 									<a href="https://github.com/shubhaja/Engage-iOS-1.2" class="image fit"><img src="images/EngageDemo2.png" alt="" /></a>
-									<p>Engage is a software startup that allows professors to gauge student understanding in large classrooms using Firebase, Charts, Nearby, Swift, Android Studio, and more. I worked extensively on the UI, Firebase, and Charts API in the iOS app.</p>
+									<p>Engage is a software startup founded by two members in <a href="https://www.linkedin.com/company/mobile-developers-of-berkeley/about/">MDB</a> that allows professors to gauge student understanding in large classrooms using Firebase, Charts, Nearby, Swift, Android Studio, and more. I worked extensively on the UI, Firebase, and Charts API in the iOS app.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/shubhaja/Engage-iOS-1.2" class="button">Full Story</a></li>
 									</ul>
@@ -96,8 +96,8 @@
 												<h2><a href="https://resumeboys.wixsite.com/resumeboys">Resume Boys</a></h2>
 												<h3>A volunteer-based resume service for high schoolers</h3>
 										</header>
-										<a href="https://resumeboys.wixsite.com/resumeboys" class="image fit"><img src="images/ResumeDemo.png" alt="" /></a>
-										<p>In high school, some of my friends and I started a "non-profit" organization in order to help fellow high schoolers find summer internships/research positions by making them professional-looking resumes.</p>
+										<a href="https://resumeboys.wixsite.com/resumeboys" class="image fit"><img src="images/ResumeDemo2.png" alt="" /></a>
+										<p>In high school, some of my friends and I started a non-profit organization in order to help fellow high schoolers find summer internships/research positions by making them professional-looking resumes. There was a much larger demand for them than anticipated and it still lives on today!</p>
 										<ul class="actions special">
 											<li><a href="https://resumeboys.wixsite.com/resumeboys" class="button">Full Story</a></li>
 										</ul>
