Deployment and fixing errors

--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 								<article>
 									<header>
 										<h2><a href="https://github.com/micahtyong/Enhance">Enhance</a></h2>
-										<h3>Fitness training program<br />using OpenPose</h3>
+										<h3>Fitness training program<br />using <a href="https://github.com/CMU-Perceptual-Computing-Lab/openpose">OpenPose</a></h3>
 									</header>
 									<a href="https://github.com/micahtyong/Enhance" class="image fit"><img src="images/EnhanceDemo.png" alt="" /></a>
-									<p>The motive behind this product was to create a fitness application designed for people with busy lives, whether it be college students or working professionals. I wanted to create a fitness app entirely different from the ones that already exist on mobile devices. Available on iOS.</p>
+									<p>The motive behind this product was to create a fitness application designed for people with busy lives, whether it be college students or working professionals. I wanted to create a fitness app entirely different from the ones that already exist on mobile devices. Won 'Most Innovative' in <a href="http://iosdecal.com/">Berkeley's iOS Course</a>. Available on iOS.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/micahtyong/Enhance" class="button">Full Story</a></li>
 									</ul>
@@ -86,7 +86,7 @@
 											<h3>Mobile/web application designed to make Greek life more safe and accessible</h3>
 									</header>
 									<a href="https://github.com/micahtyong/PartyTime" class="image fit"><img src="images/PartyTimeDemo2.png" alt="" /></a>
-									<p>PartyTime is a web application concept that allows university students to find fraternity parties in their area in a safe and accessible way. Made @ CalHacks 5.0 with a team of 4.</p>
+									<p>PartyTime is a web application concept that allows university students to find fraternity parties in their area in a safe and accessible way. Made @ CalHacks 5.0 with a team of 4 using Figma, React, SQL, and Python.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/micahtyong/PartyTime" class="button">Full Story</a></li>
 									</ul>
