--- a/generic.html
+++ b/generic.html
@@ -23,7 +23,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Work</a></li>
-							<li class="active"><a href="generic.html">About</a></li>
+							<li class="active"><a href="about.html">About</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/micah-yong/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
