Fix bug on mobile

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 							I'm Micah Yong</h1>
 							<p>an LA-born, computer science student at the University of California, Berkeley.</p>
 							<ul class="actions">
-							<li><a href="#nav" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#nav" class="button icon solo fa-arrow-down scrolly"></a></li>
 						</ul>
 					</div>
 				<!-- Header -->
