--- a/index.html
+++ b/index.html
@@ -71,13 +71,14 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/shubhaja/Engage-iOS-1.2">Engage</a></h2>
+										<h2><a href="">Engage</a></h2>
 										<h3>Gauge student mastery <br />in large classrooms</h3>
 									</header>
-									<a href="https://github.com/shubhaja/Engage-iOS-1.2" class="image fit"><img src="images/EngageDemo2.png" alt="" /></a>
+									<!-- https://github.com/shubhaja/Engage-iOS-1.2 -->
+									<a href="" class="image fit"><img src="images/EngageDemo2.png" alt="" /></a>
 									<p>Engage is a software startup founded by two members in <a href="https://www.linkedin.com/company/mobile-developers-of-berkeley/about/">MDB</a> that allows professors to gauge student understanding in large classrooms using Firebase, Charts, Nearby, Swift, Android Studio, and more. I worked extensively on the UI, Firebase, and Charts API in the iOS app.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/shubhaja/Engage-iOS-1.2" class="button">Full Story</a></li>
+										<li><a href="" class="button">Coming Soon</a></li>
 									</ul>
 								</article>
 								<article>
