--- a/index.html
+++ b/index.html
@@ -64,9 +64,10 @@
 										<h3>Fitness training program <br />using <a href="https://github.com/CMU-Perceptual-Computing-Lab/openpose">OpenPose</a></h3>
 									</header>
 									<a href="https://github.com/micahtyong/Enhance" class="image fit"><img src="images/EnhanceDemo.png" alt="" /></a>
-									<p>The motive behind this product was to create a fitness application designed for people who struggle with musculoskeletal disorders. I wanted to create a fitness app entirely different from the ones that already exist on mobile devices. Won 'Most Innovative' in <a href="http://iosdecal.com/">Berkeley's iOS Course</a>. Available on iOS.</p>
+									<p>The motive behind this product was to create a fitness application designed for people who struggle with musculoskeletal disorders. I wanted to create a fitness app entirely different from the ones that already exist on mobile devices. Won 'Most Innovative' in <a href="http://iosdecal.com/">Berkeley's iOS Course</a>. Available on <a href="https://apps.apple.com/us/app/enhanceai/id1477011488?ls=1">iOS</a>.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/micahtyong/Enhance" class="button">Full Story</a></li>
+										<li><a href="https://apps.apple.com/us/app/enhanceai/id1477011488?ls=1" class="button">Download</a></li>
+										<!-- <li><a href="https://github.com/micahtyong/Enhance" class="button">Full Story</a></li> -->
 									</ul>
 								</article>
 								<article>
