--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 											<h2><a href="https://github.com/micahtyong/PartyTime">PartyTime</a></h2>
 											<h3>Mobile/web application designed to make Greek life more safe and accessible</h3>
 									</header>
-									<a href="https://github.com/micahtyong/PartyTime" class="image fit"><img src="images/PartyTimeDemo2.png" alt="" /></a>
+									<a href="https://github.com/micahtyong/PartyTime" class="image fit"><img src="images/PartyTimeDemo.png" alt="" /></a>
 									<p>PartyTime is a web application concept that allows university students to find fraternity parties in their area in a safe and accessible way. Made @ CalHacks 5.0 with a team of 4 using Figma, React, SQL, and Python.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/micahtyong/PartyTime" class="button">Full Story</a></li>
