--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 									</header>
 									<!-- https://github.com/shubhaja/Engage-iOS-1.2 -->
 									<a href="" class="image fit"><img src="images/EngageDemo2.png" alt="" /></a>
-									<p>Engage redefines large-classroom learning by enabling professors to gauge student understanding in large classrooms and students to anonymously communicate their feelings on class content. Uses Firebase, Charts, and Nearby. Built with a team of 7. Available on <a href="https://apps.apple.com/us/app/engage-classroom/id1478525577?ls=1">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.engage.education&fbclid=IwAR15d0yGW6r01wfqzcmnYnFdvU9IyW2A2lwz8-D-0JT_X17xR8Dlz9RqYoc">Android</a>.</p>
+									<p>Engage redefines large-classroom learning by enabling professors to gauge student understanding in large classrooms and students to anonymously communicate their feelings on class content. Uses Firebase, Charts, and Nearby. Built with a team of 7. This is the first project I've worked on with extensive backend functionality and data collection. Available on <a href="https://apps.apple.com/us/app/engage-classroom/id1478525577?ls=1">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.engage.education&fbclid=IwAR15d0yGW6r01wfqzcmnYnFdvU9IyW2A2lwz8-D-0JT_X17xR8Dlz9RqYoc">Android</a>.</p>
 									<ul class="actions special">
 										<li><a href="https://apps.apple.com/us/app/engage-classroom/id1478525577?ls=1" class="button">Download</a></li>
 									</ul>
