--- a/index.html
+++ b/index.html
@@ -84,6 +84,18 @@
 								</article>
 								<article>
 									<header>
+											<h2><a href="https://github.com/micahtyong/WeatherMLApp">WeatherML</a></h2>
+											<h3>Custom outfit recommender based on the weather.</h3>
+									</header>
+									<a href="https://github.com/micahtyong/WeatherMLApp" class="image fit"><img src="images/Over.png" alt="" /></a>
+									<p>WeatherML is a React web application that fetches weather data from OpenWeatherMap's API and suggests an outfit to users based on those features. I wanted to build an app that just told me what to wear in the morning with the click of a button. WeatherML accomplishes this using a custom ML model built using Brain.js.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/micahtyong/WeatherMLApp" class="button">Full Story</a></li>
+									</ul>
+								</article>
+								<article>
+								<article>
+									<header>
 											<h2><a href="https://github.com/micahtyong/PartyTime">PartyTime</a></h2>
 											<h3>Mobile/web application designed to make Greek life more safe and accessible</h3>
 									</header>
