--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 										<h2><a href="https://github.com/micahtyong/Enhance">Enhance</a></h2>
 										<h3>Fitness training program <br />using <a href="https://github.com/CMU-Perceptual-Computing-Lab/openpose">OpenPose</a></h3>
 									</header>
-									<a href="https://github.com/micahtyong/Enhance" class="image fit"><img src="images/EnhanceD2.png" alt="" /></a>
+									<a href="https://github.com/micahtyong/Enhance" class="image fit"><img src="images/EnhanceD3.png" alt="" /></a>
 									<p style="text-align:center;">The motive behind this product was to create a fitness application designed for people who struggle with musculoskeletal disorders. I wanted to create a fitness app entirely different from the ones that already exist on mobile devices. Won 'Most Innovative' in <a href="http://iosdecal.com/">Berkeley's iOS Course</a>. Available on <a href="https://apps.apple.com/us/app/enhanceai/id1477011488?ls=1">iOS</a>. Featured on Google's Case Studies for Higher Education.</p>
 									<ul class="actions special">
 										<li><a href="https://apps.apple.com/us/app/enhanceai/id1477011488?ls=1" class="button">Download</a></li>
@@ -88,19 +88,19 @@
 											<h3>Custom outfit recommender based on the weather.</h3>
 									</header>
 									<a href="https://github.com/micahtyong/WeatherMLApp" class="image fit"><img src="images/Over.png" alt="" /></a>
-									<p>WeatherML is a React web application that fetches weather data from OpenWeatherMap's API and suggests an outfit to users based on those features. I wanted to build an app that just told me what to wear in the morning with the click of a button. WeatherML accomplishes this using a custom ML model built using Brain.js.</p>
+									<p style="text-align:center;">WeatherML is a React web application that fetches weather data from OpenWeatherMap's API and suggests an outfit to users based on those features. I wanted to build an app that just told me what to wear in the morning with the click of a button. WeatherML accomplishes this using a custom ML model built using Brain.js.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/micahtyong/WeatherMLApp" class="button">Full Story</a></li>
 									</ul>
 								</article>
-								<article>
+								<!-- <article> -->
 								<article>
 									<header>
 											<h2><a href="https://github.com/micahtyong/PartyTime">PartyTime</a></h2>
 											<h3>Mobile/web application designed to make Greek life more safe and accessible</h3>
 									</header>
-									<a href="https://github.com/micahtyong/PartyTime" class="image fit"><img src="images/PartyTimeDemo.png" alt="" /></a>
-									<p>PartyTime is a web application concept that allows university students to find fraternity parties in their area in a safe and accessible way. Made @ CalHacks 5.0 with a team of 4 using Figma, React, SQL, and Python.</p>
+									<a href="https://github.com/micahtyong/PartyTime" class="image fit"><img src="images/PartyTimeDemo3.png" alt="" /></a>
+									<p style="text-align:center;">PartyTime is a web application concept that allows university students to find fraternity parties in their area in a safe and accessible way. Made @ CalHacks 5.0 with a team of 4 using Figma, React, SQL, and Python.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/micahtyong/PartyTime" class="button">Full Story</a></li>
 									</ul>
@@ -111,11 +111,11 @@
 												<h3>A volunteer-based resume service for high schoolers</h3>
 										</header>
 										<a href="https://resumeboys.wixsite.com/resumeboys" class="image fit"><img src="images/ResumeDemo2.png" alt="" /></a>
-										<p>In high school, some of my friends and I started a non-profit organization in order to help fellow high schoolers find summer internships/research positions by making them professional-looking resumes. There was a much larger demand for them than anticipated and it still lives on today!</p>
+										<p style="text-align:center;">In high school, some of my friends and I started a non-profit organization in order to help fellow high schoolers find summer internships/research positions by making them professional-looking resumes. There was a much larger demand for them than anticipated and it still lives on today!</p>
 										<ul class="actions special">
 											<li><a href="https://resumeboys.wixsite.com/resumeboys" class="button">Full Story</a></li>
 										</ul>
-									</article>
+								</article>
 							</section>
 					</div>
 
