--- a/index.html
+++ b/index.html
@@ -67,19 +67,17 @@
 									<p style="text-align:center;">The motive behind this product was to create a fitness application designed for people who struggle with musculoskeletal disorders. I wanted a fitness app entirely different from the ones that already exist on mobile devices. Won 'Most Innovative' in <a href="http://iosdecal.com/">Berkeley's iOS Course</a>. Available on <a href="https://apps.apple.com/us/app/enhanceai/id1477011488?ls=1">iOS</a>. Featured on Google's Case Studies for Higher Education.</p>
 									<ul class="actions special">
 										<li><a href="https://apps.apple.com/us/app/enhanceai/id1477011488?ls=1" class="button">Download</a></li>
-										<!-- <li><a href="https://github.com/micahtyong/Enhance" class="button">Full Story</a></li> -->
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="">Engage</a></h2>
+										<h2><a href="https://teamengageapp.github.io/">Engage</a></h2>
 										<h3>Gauge student mastery <br />in large classrooms</h3>
 									</header>
-									<!-- https://github.com/shubhaja/Engage-iOS-1.2 -->
-									<a href="" class="image fit"><img src="images/Eng3.png" alt="" /></a>
+									<a href="https://teamengageapp.github.io/" class="image fit"><img src="images/Eng3.png" alt="" /></a>
 									<p style="text-align:center;">Engage redefines large-classroom learning by enabling professors to gauge student understanding in large classrooms and students to anonymously communicate their feelings on class content. Uses Firebase, Charts, and Nearby. This is the first group project I've worked on with extensive backend functionality and cross-platform capability. Available on <a href="https://apps.apple.com/us/app/engage-classroom/id1478525577?ls=1">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.engage.education&fbclid=IwAR15d0yGW6r01wfqzcmnYnFdvU9IyW2A2lwz8-D-0JT_X17xR8Dlz9RqYoc">Android</a>.</p>
 									<ul class="actions special">
-										<li><a href="https://apps.apple.com/us/app/engage-classroom/id1478525577?ls=1" class="button">Download</a></li>
+										<li><a href="https://teamengageapp.github.io/" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
